--- a/findaword/Welcome_files/Welcome.css
+++ b/findaword/Welcome_files/Welcome.css
@@ -4,13 +4,13 @@
 .paragraph_style {
     color: rgb(0, 0, 0);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 36px;
+    font-size: 47px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 42px;
+    line-height: 54px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -49,6 +49,28 @@
     text-indent: 0px;
     text-transform: none;
 }
+.paragraph_style_2 {
+    color: rgb(113, 113, 113);
+    font-family: 'Georgia', serif;
+    font-size: 13px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 18px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: right;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
 .style_2 {
     font-family: 'Georgia', serif;
     font-size: 10px;
@@ -57,7 +79,10 @@
     font-weight: 400;
     line-height: 13px;
 }
-.paragraph_style_2 {
+.style_3 {
+    padding: 0px;
+}
+.paragraph_style_3 {
     color: rgb(0, 188, 242);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
     font-size: 20px;
@@ -79,7 +104,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_4 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
     font-size: 10px;
@@ -101,7 +126,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.style_4 {
     color: rgb(87, 87, 87);
     font-family: 'Georgia', serif;
     font-size: 14px;
@@ -115,7 +140,203 @@
     text-decoration: none;
     text-transform: none;
 }
-.style_4 {
+.paragraph_style_5 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 6px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_5 {
+    color: rgb(0, 0, 0);
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_6 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_7 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_6 {
+    color: rgb(4, 51, 255);
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.style_7 {
+    color: rgb(87, 87, 87);
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_8 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_9 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 6px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_8 {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+}
+.style_9 {
+    color: rgb(4, 51, 255);
+    font-family: 'Georgia-Bold', 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_10 {
+    color: rgb(0, 0, 0);
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 17px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 6px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_10 {
     color: rgb(87, 87, 87);
     font-family: 'Georgia', serif;
     font-size: 14px;
@@ -125,7 +346,7 @@
     line-height: 16px;
     opacity: 1.00;
 }
-.paragraph_style_4 {
+.paragraph_style_11 {
     color: rgb(0, 188, 242);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
     font-size: 20px;
@@ -147,19 +368,121 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_500_380 {
+.paragraph_style_12 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_13 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_11 {
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_14 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 6px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_External_500_811 {
     bottom: 0px;
     position: relative;
     width: 500px;
 }
-.style_5 {
+.style_SkipStrokeSkipFillSkipOpacity {
+    float: none;
+    margin: 0px;
+}
+.style_SkipStrokeSkipFillSkipOpacity_1 {
+    float: none;
+    margin: 0px;
+}
+.style_SkipStrokeSkipFillSkipOpacity_2 {
+    float: none;
+    margin: 0px;
+}
+.style_SkipStrokeSkipFillSkipOpacity_3 {
+    float: none;
+    margin: 0px;
+}
+.style_12 {
     padding: 4px;
 }
-.style_SkipStroke_1 {
+.style_External_700_70 {
+    position: relative;
+}
+.style_External_275_62 {
+    bottom: 0px;
+    position: relative;
+    width: 275px;
+}
+.style_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
-.style_SkipStroke {
+.style_SkipStroke_1 {
     background: transparent;
     opacity: 1.00;
 }
@@ -179,34 +502,10 @@
     background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
     opacity: 1.00;
 }
-.style_External_163_322 {
+.style_External_163_235 {
     position: relative;
 }
-.style_External_275_50 {
-    bottom: 0px;
-    position: relative;
-    width: 275px;
-}
-.style_External_395_55 {
-    position: relative;
-}
-.style_SkipStrokeSkipFillSkipOpacity {
-    float: none;
-    margin: 0px;
-}
-.style_SkipStrokeSkipFillSkipOpacity_1 {
-    float: none;
-    margin: 0px;
-}
-.style_SkipStrokeSkipFillSkipOpacity_2 {
-    float: none;
-    margin: 0px;
-}
-.style_SkipStrokeSkipFillSkipOpacity_3 {
-    float: none;
-    margin: 0px;
-}
-.style_External_700_70 {
+.style_External_395_57 {
     position: relative;
 }
 .Accomplishments {
@@ -241,6 +540,28 @@
     font-weight: 400;
     letter-spacing: 0;
     line-height: 17px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.Free_Form {
+    color: rgb(81, 81, 81);
+    font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
+    font-size: 12px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 14px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -297,18 +618,18 @@
     text-indent: 0px;
     text-transform: none;
 }
-.Normal {
-    padding: 0px;
+.Normal_External_500_811 {
+    bottom: 0px;
+    position: absolute;
+    width: 500px;
 }
-.Normal_External_275_50 {
+.Normal_External_275_62 {
     bottom: 0px;
     position: absolute;
     width: 275px;
 }
-.Normal_External_500_380 {
-    bottom: 0px;
-    position: absolute;
-    width: 500px;
+.Normal {
+    padding: 0px;
 }
 .Standard {
     color: rgb(0, 0, 0);
@@ -339,19 +660,19 @@
     background: transparent;
     opacity: 1.00;
 }
-.graphic_shape_layout_style_default {
-    padding: 4px;
-}
 .graphic_shape_layout_style_default_External_700_70 {
     position: relative;
 }
-.graphic_shape_style_default_SkipStroke {
-    background: rgb(183, 97, 78);
-    opacity: 1.00;
+.graphic_shape_layout_style_default {
+    padding: 4px;
 }
 .graphic_shape_style_default_SkipStrokeSkipFillSkipOpacity {
     float: none;
     margin: 0px;
+}
+.graphic_shape_style_default_SkipStroke {
+    background: rgb(183, 97, 78);
+    opacity: 1.00;
 }
 .graphic_shape_style_default_2_SkipStroke {
     background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
@@ -361,18 +682,30 @@
     float: none;
     margin: 0px;
 }
+.graphic_textbox_layout_style_default_External_163_235 {
+    position: relative;
+}
+.graphic_textbox_layout_style_default_External_395_57 {
+    position: relative;
+}
 .graphic_textbox_layout_style_default {
     padding: 4px;
-}
-.graphic_textbox_layout_style_default_External_395_55 {
-    position: relative;
-}
-.graphic_textbox_layout_style_default_External_163_322 {
-    position: relative;
 }
 .graphic_textbox_style_default_SkipStroke {
     background: transparent;
     opacity: 1.00;
+}
+a {
+    color: rgb(183, 97, 78);
+    text-decoration: none;
+}
+a:visited {
+    color: rgb(66, 66, 66);
+    text-decoration: none;
+}
+a:hover {
+    color: rgb(224, 133, 102);
+    text-decoration: underline;
 }
 ol  { 
       padding:0;
