--- a/findaword/Welcome_files/Welcome.css
+++ b/findaword/Welcome_files/Welcome.css
@@ -127,7 +127,7 @@
     text-transform: none;
 }
 .style_4 {
-    color: rgb(87, 87, 87);
+    color: rgb(0, 0, 0);
     font-family: 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
@@ -163,7 +163,7 @@
     text-transform: none;
 }
 .style_5 {
-    color: rgb(0, 0, 0);
+    color: rgb(87, 87, 87);
     font-family: 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
@@ -234,20 +234,6 @@
     text-decoration: none;
     text-transform: none;
 }
-.style_7 {
-    color: rgb(87, 87, 87);
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
 .paragraph_style_8 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
@@ -292,7 +278,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_8 {
+.style_7 {
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 14px;
     font-stretch: normal;
@@ -300,8 +286,30 @@
     font-weight: 400;
     line-height: 17px;
 }
-.style_9 {
-    color: rgb(4, 51, 255);
+.paragraph_style_10 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_8 {
+    color: rgb(0, 0, 0);
     font-family: 'Georgia-Bold', 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
@@ -314,7 +322,7 @@
     text-decoration: none;
     text-transform: none;
 }
-.paragraph_style_10 {
+.paragraph_style_11 {
     color: rgb(0, 0, 0);
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 14px;
@@ -336,36 +344,18 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_10 {
-    color: rgb(87, 87, 87);
-    font-family: 'Georgia', serif;
+.style_9 {
+    color: rgb(4, 51, 255);
+    font-family: 'Georgia-Bold', 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
     font-style: normal;
-    font-weight: 400;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
     line-height: 16px;
     opacity: 1.00;
-}
-.paragraph_style_11 {
-    color: rgb(0, 188, 242);
-    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 20px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 23px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 4px;
-    padding-top: 12px;
-    text-align: left;
     text-decoration: none;
-    text-indent: 0px;
     text-transform: none;
 }
 .paragraph_style_12 {
@@ -390,7 +380,59 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_10 {
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+}
 .paragraph_style_13 {
+    color: rgb(0, 188, 242);
+    font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
+    font-size: 20px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 23px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 4px;
+    padding-top: 12px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_14 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_15 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
     font-size: 10px;
@@ -424,7 +466,43 @@
     text-decoration: none;
     text-transform: none;
 }
-.paragraph_style_14 {
+.style_12 {
+    color: rgb(87, 87, 87);
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_16 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_17 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
     font-size: 10px;
@@ -450,7 +528,7 @@
     float: none;
     margin: 0px;
 }
-.style_12 {
+.style_13 {
     padding: 4px;
 }
 .style_External_700_70 {
