Flesh out guidelines.

--- a/findaword/Guidelines_files/Guidelines.css
+++ b/findaword/Guidelines_files/Guidelines.css
@@ -107,7 +107,91 @@
     text-indent: 0px;
     text-transform: none;
 }
+.style_3 {
+    color: rgb(0, 0, 0);
+    font-family: 'Georgia-Bold', 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.style_4 {
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    text-decoration: none;
+    text-transform: none;
+}
 .paragraph_style_4 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_5 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Bold', 'Optima';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 18px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_5 {
+    color: rgb(0, 0, 0);
+    font-family: 'Georgia-Bold', 'Georgia', serif;
+    font-size: 19px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 21px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.paragraph_style_6 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
     font-size: 10px;
@@ -129,7 +213,51 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_3 {
+.paragraph_style_7 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 12px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: center;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_8 {
+    color: rgb(0, 0, 0);
+    font-family: 'Optima-Bold', 'Optima';
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 18px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 6px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style_6 {
     font-family: 'Georgia-Bold', 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
@@ -141,13 +269,39 @@
     text-decoration: none;
     text-transform: none;
 }
-.style_4 {
+.style_7 {
     padding: 4px;
 }
 .style_External_163_128 {
     position: relative;
 }
-.paragraph_style_5 {
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_1 {
+    background: transparent;
+    float: none;
+    margin: 0px;
+    opacity: 1.00;
+}
+.style_SkipStroke_2 {
+    background: transparent;
+    float: none;
+    margin: 0px;
+    opacity: 1.00;
+}
+.style_SkipStroke_3 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_4 {
+    background: transparent;
+    float: none;
+    margin: 0px;
+    opacity: 1.00;
+}
+.paragraph_style_9 {
     color: rgb(113, 113, 113);
     font-family: 'Georgia', serif;
     font-size: 13px;
@@ -169,39 +323,23 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_5 {
-    padding: 4px;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_1 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_2 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_3 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_4 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_5 {
-    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
-    opacity: 1.00;
-}
 .style_External_275_62 {
     bottom: 0px;
     position: relative;
     width: 275px;
 }
-.style_External_673_685 {
+.style_SkipStroke_5 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_8 {
+    padding: 4px;
+}
+.style_SkipStroke_6 {
+    background: transparent url(About_Header_Paper.jpg) repeat scroll top left;
+    opacity: 1.00;
+}
+.style_External_673_4134 {
     bottom: 0px;
     position: relative;
     width: 673px;
@@ -304,15 +442,15 @@
 .Normal {
     padding: 0px;
 }
-.Normal_External_673_685 {
-    bottom: 0px;
-    position: absolute;
-    width: 673px;
-}
 .Normal_External_275_62 {
     bottom: 0px;
     position: absolute;
     width: 275px;
+}
+.Normal_External_673_4134 {
+    bottom: 0px;
+    position: absolute;
+    width: 673px;
 }
 .Standard {
     color: rgb(0, 0, 0);
@@ -337,10 +475,14 @@
 }
 .graphic_image_style_default_SkipStroke {
     background: transparent;
+    float: none;
+    margin: 0px;
     opacity: 1.00;
 }
 .graphic_image_style_default_2_SkipStroke {
     background: transparent;
+    float: none;
+    margin: 0px;
     opacity: 1.00;
 }
 .graphic_shape_layout_style_default {
@@ -420,6 +562,26 @@ a.class4:visited {
     color: rgb(178, 23, 2);
 }
 a.class4:hover {
+    color: rgb(224, 133, 102);
+    text-decoration: underline;
+}
+a.class5 {
+    color: rgb(178, 23, 2);
+}
+a.class5:visited {
+    color: rgb(178, 23, 2);
+}
+a.class5:hover {
+    color: rgb(224, 133, 102);
+    text-decoration: underline;
+}
+a.class6 {
+    color: rgb(178, 23, 2);
+}
+a.class6:visited {
+    color: rgb(178, 23, 2);
+}
+a.class6:hover {
     color: rgb(224, 133, 102);
     text-decoration: underline;
 }
