--- a/findaword/Welcome_files/Welcome.css
+++ b/findaword/Welcome_files/Welcome.css
@@ -1,3 +1,71 @@
+/*
+If iPhone orientation is important, maybe add the following to @media:
+	and (orientation : portrait)
+	and (orientation : landscape)
+*/
+
+/* Default*/
+html {
+  font-size: 10px;
+}
+
+/* iPhone X */
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) {
+	html {
+	  font-size: 64px;
+	}
+}
+
+/* iPhone 7/8 */
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 667px) 
+    and (-webkit-device-pixel-ratio : 2) {
+	html {
+	  font-size: 64px;
+	}
+}
+
+/* iPhone 6+/6s+/7+/8+ */
+@media only screen 
+    and (device-width : 414px) 
+    and (device-height : 736px) 
+    and (-webkit-device-pixel-ratio : 3) {
+	html {
+	  font-size: 64px;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	html {
+	  font-size: 32px;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	html {
+	  font-size: 16px;
+	}
+}
+
+.style_courier {
+    color: rgb(0, 0, 0);
+    font-family: 'Courier', serif;
+    font-size: 1rem;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+
 .style {
     padding: 4px;
 }
@@ -98,28 +166,6 @@
     margin-top: 0px;
     opacity: 1.00;
     padding-bottom: 4px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_4 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
     padding-top: 0px;
     text-align: left;
     text-decoration: none;
@@ -234,28 +280,6 @@
     text-decoration: none;
     text-transform: none;
 }
-.paragraph_style_8 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
 .paragraph_style_9 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
@@ -286,28 +310,6 @@
     font-weight: 400;
     line-height: 17px;
 }
-.paragraph_style_10 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
 .style_8 {
     color: rgb(0, 0, 0);
     font-family: 'Georgia-Bold', 'Georgia', serif;
@@ -321,6 +323,28 @@
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
+}
+.style_9 {
+    color: rgb(4, 51, 255);
+    font-family: 'Georgia-Bold', 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 16px;
+    opacity: 1.00;
+    text-decoration: none;
+    text-transform: none;
+}
+.style_10 {
+    font-family: 'Georgia', serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
 }
 .paragraph_style_11 {
     color: rgb(0, 0, 0);
@@ -344,49 +368,17 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_9 {
-    color: rgb(4, 51, 255);
-    font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_12 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_10 {
+.style_11 {
     font-family: 'Georgia', serif;
     font-size: 14px;
     font-stretch: normal;
     font-style: normal;
+    font-variant: normal;
     font-weight: 400;
+    letter-spacing: 0;
     line-height: 16px;
+    text-decoration: none;
+    text-transform: none;
 }
 .paragraph_style_13 {
     color: rgb(0, 188, 242);
@@ -405,98 +397,6 @@
     opacity: 1.00;
     padding-bottom: 4px;
     padding-top: 12px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_14 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 6px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_15 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.style_11 {
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    text-decoration: none;
-    text-transform: none;
-}
-.style_12 {
-    color: rgb(87, 87, 87);
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
-    text-transform: none;
-}
-.paragraph_style_16 {
-    color: rgb(0, 0, 0);
-    font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 12px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
     text-align: left;
     text-decoration: none;
     text-indent: 0px;
@@ -522,20 +422,6 @@
     text-align: left;
     text-decoration: none;
     text-indent: 0px;
-    text-transform: none;
-}
-.style_courier {
-    color: rgb(0, 0, 0);
-    font-family: 'Courier', serif;
-    font-size: 18px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 16px;
-    opacity: 1.00;
-    text-decoration: none;
     text-transform: none;
 }
 .style_SkipStrokeSkipFillSkipOpacity {
