--- a/findaword/Welcome.css
+++ b/findaword/Welcome.css
@@ -69,6 +69,7 @@ html {
 	}
 }
 
+/*
 @media only screen and (min-width: 600px) {
 	html {
 	  font-size: 32px;
@@ -80,6 +81,7 @@ html {
 	  font-size: 16px;
 	}
 }
+*/
 
 .style_courier {
     color: rgb(0, 0, 0);
