--- a/findaword/Welcome_files/Welcome.css
+++ b/findaword/Welcome_files/Welcome.css
@@ -9,6 +9,36 @@ html {
   font-size: 10px;
 }
 
+/* iPhone XR */
+@media only screen 
+    and (device-width : 414px) 
+    and (device-height : 896px) 
+    and (-webkit-device-pixel-ratio : 2) {
+	html {
+	  font-size: 64px;
+	}
+}
+
+/* iPhone XS */
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) {
+	html {
+	  font-size: 64px;
+	}
+}
+
+/* iPhone XS Max */
+@media only screen 
+    and (device-width : 414px) 
+    and (device-height : 896px) 
+    and (-webkit-device-pixel-ratio : 3) {
+	html {
+	  font-size: 64px;
+	}
+}
+
 /* iPhone X */
 @media only screen 
     and (device-width : 375px) 
@@ -36,18 +66,6 @@ html {
     and (-webkit-device-pixel-ratio : 3) {
 	html {
 	  font-size: 64px;
-	}
-}
-
-@media only screen and (min-width: 600px) {
-	html {
-	  font-size: 32px;
-	}
-}
-
-@media only screen and (max-width: 600px) {
-	html {
-	  font-size: 16px;
 	}
 }
 
