--- a/findaword/Welcome_files/Welcome.css
+++ b/findaword/Welcome_files/Welcome.css
@@ -4,9 +4,21 @@ If iPhone orientation is important, maybe add the following to @media:
 	and (orientation : landscape)
 */
 
-/* Default*/
+/* Default for computer screen */
 html {
-  font-size: 10px;
+  font-size: 13px;
+}
+
+@media only screen and (min-width: 600px) {
+	html {
+	  font-size: 15px;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	html {
+	  font-size: 13px;
+	}
 }
 
 /* iPhone XR */
@@ -72,13 +84,13 @@ html {
 .style_courier {
     color: rgb(0, 0, 0);
     font-family: 'Courier', serif;
-    font-size: 1rem;
+    font-size: 1.38rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
@@ -87,16 +99,16 @@ html {
 .style {
     padding: 4px;
 }
-.paragraph_style {
+.header_style {
     color: rgb(0, 0, 0);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 47px;
+    font-size: 3.5rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 54px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -116,13 +128,13 @@ html {
 .paragraph_style_1 {
     color: rgb(113, 113, 113);
     font-family: 'Georgia', serif;
-    font-size: 13px;
+    font-size: 1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 18px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -138,13 +150,13 @@ html {
 .paragraph_style_2 {
     color: rgb(113, 113, 113);
     font-family: 'Georgia', serif;
-    font-size: 13px;
+    font-size: 1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 18px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -159,11 +171,11 @@ html {
 }
 .style_2 {
     font-family: 'Georgia', serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
-    line-height: 13px;
+    line-height: 1.5;
 }
 .style_3 {
     padding: 0px;
@@ -171,13 +183,13 @@ html {
 .paragraph_style_3 {
     color: rgb(0, 188, 242);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 20px;
+    font-size: 1.54rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 23px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -193,13 +205,13 @@ html {
 .style_4 {
     color: rgb(0, 0, 0);
     font-family: 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
@@ -207,13 +219,13 @@ html {
 .paragraph_style_5 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 12px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -229,13 +241,13 @@ html {
 .style_5 {
     color: rgb(87, 87, 87);
     font-family: 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
@@ -243,13 +255,13 @@ html {
 .paragraph_style_6 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 12px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -265,13 +277,13 @@ html {
 .paragraph_style_7 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 12px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -287,13 +299,13 @@ html {
 .style_6 {
     color: rgb(4, 51, 255);
     font-family: 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
@@ -301,13 +313,13 @@ html {
 .paragraph_style_9 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 12px;
+    font-size: 0.92rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 14px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -322,22 +334,22 @@ html {
 }
 .style_7 {
     font-family: 'Helvetica', 'Arial', sans-serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
-    line-height: 17px;
+    line-height: 1.5;
 }
 .style_8 {
     color: rgb(0, 0, 0);
     font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 700;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
@@ -345,35 +357,35 @@ html {
 .style_9 {
     color: rgb(4, 51, 255);
     font-family: 'Georgia-Bold', 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 700;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     opacity: 1.00;
     text-decoration: none;
     text-transform: none;
 }
 .style_10 {
     font-family: 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 1.5;
 }
 .paragraph_style_11 {
     color: rgb(0, 0, 0);
     font-family: 'Helvetica', 'Arial', sans-serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 17px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -388,26 +400,26 @@ html {
 }
 .style_11 {
     font-family: 'Georgia', serif;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 16px;
+    line-height: 1.5;
     text-decoration: none;
     text-transform: none;
 }
 .paragraph_style_13 {
     color: rgb(0, 188, 242);
     font-family: 'AmericanTypewriter', 'American Typewriter', 'Courier', serif;
-    font-size: 20px;
+    font-size: 1.54rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 23px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -423,13 +435,13 @@ html {
 .paragraph_style_17 {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 12px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -495,13 +507,13 @@ html {
 .Accomplishments {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 12px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -517,13 +529,13 @@ html {
 .Body {
     color: rgb(81, 81, 81);
     font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 12px;
+    font-size: 0.92rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 17px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -539,13 +551,13 @@ html {
 .Free_Form {
     color: rgb(81, 81, 81);
     font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 12px;
+    font-size: 0.92rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 14px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -561,13 +573,13 @@ html {
 .Header {
     color: rgb(121, 121, 121);
     font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
+    font-size: 2.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 300;
     letter-spacing: 0;
-    line-height: 44px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -583,13 +595,13 @@ html {
 .Heading_1 {
     color: rgb(183, 97, 78);
     font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'Arial', sans-serif;
-    font-size: 36px;
+    font-size: 2.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 300;
     letter-spacing: 0;
-    line-height: 44px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -618,7 +630,7 @@ html {
 .Standard {
     color: rgb(0, 0, 0);
     font-family: 'Optima-Regular', 'Optima', 'Trebuchet MS', sans-serif;
-    font-size: 10px;
+    font-size: 0.77rem;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
